# quickbet-prediction-market

./: .gitignore  API.md  AUTOMATED-DEPLOY.md  CLOUDFLARE-UPDATED.md  CLOUDFLARE.md  Cargo.toml  DEPLOY-CONTRACT-NOW.md  DEPLOY-INSTRUCTIONS.md  DEPLOY-NOW.md  DEPLOYMENT.md  Dockerfile  Dockerfile.linera  EXACT-CLOUDFLARE-SETUP.md  FEATURES.md  LICENSE  README.md  SUMMARY.md  WINDOWS-DEPLOY.md  cloudflare-deploy.sh  compose.linera.yaml  compose.yaml  deploy-in-docker.sh  deploy-linera.sh  run.bash
.github/workflows/: deploy.yml
frontend/: .env.example  .env.production  index.html  package.json  tailwind.config.js  vite.config.ts  wrangler.jsonc  wrangler.toml
frontend/public/: _headers  _redirects  robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: CreateMarket.tsx  Header.tsx  Leaderboard.tsx  MarketCard.tsx  MarketList.tsx  PlaceBet.tsx  ResolveMarket.tsx  Toast.tsx  TransactionHistory.tsx  UserProfile.tsx  WalletButton.tsx
frontend/src/hooks/: useLinera.ts  useToast.ts  useWallet.ts
frontend/src/types/: index.ts
src/: contract.rs  lib.rs  service.rs  state.rs
