[package]
name = "prediction-market"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.12.1"
async-graphql = { version = "7.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
bcs = "0.1.4"

[dev-dependencies]
linera-sdk = { version = "0.12.1", features = ["test"] }

[[bin]]
name = "prediction-market-contract"
path = "src/contract.rs"

[[bin]]
name = "prediction-market-service"
path = "src/service.rs"

[profile.release]
debug = false
lto = true
opt-level = 'z'
strip = true

[workspace]
